# ESP32Controller

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/shtc1/: CMakeLists.txt  sensirion_i2c.c  sensirion_i2c.h  user_config.inc
main/: CMakeLists.txt  SHTC1Sensor.cpp  main.cpp
sensors/shtc3/: CMakeLists.txt  SHTC1Sensor.cpp  SHTC1Sensor.h
sensors/shtc3Sensor/: CMakeLists.txt  SHTC3Sensor.cpp  SHTC3Sensor.h
test/: CMakeLists.txt  README.md  sdkconfig.test  test_sensirion_i2c.c  test_shtc3_sensor.cpp
